챔피언 정보 기능 추가

--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -13,6 +13,6 @@
     <item
         android:id="@+id/navigation_champion"
         android:enabled="true"
-        android:icon="@drawable/user_cowboy"
+        android:icon="@drawable/warrior_helmet_2750"
         android:title="@string/lolmenu_label_champInfo"/>
 </menu>
