--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,7 +13,8 @@
 
         <action
             android:id="@+id/action_navigation_home_to_navigation_user"
-            app:destination="@id/navigation_user" />
+            app:destination="@id/navigation_user"
+            />
     </fragment>
 
     <fragment
