대전 기록 수정

--- a/app/src/main/res/layout/fragment_champion.xml
+++ b/app/src/main/res/layout/fragment_champion.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.champion.ChampionFragment">
+    tools:context=".mainfragment.champion.ChampionFragment">
 
     <TextView
         android:id="@+id/text_champion"
