공유 라이브러리 최소화 공유 라이브러리 버그 수정

--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -4,7 +4,8 @@
         android:id="@+id/navigation_home"
         android:enabled="true"
         android:icon="@drawable/user"
-        android:title="@string/lolmenu_label_userIput"/>
+        android:title="@string/lolmenu_label_userIput"
+        android:visible="false"/>
     <item
         android:id="@+id/navigation_user"
         android:enabled="true"
